--- a/package.json
+++ b/package.json
@@ -4,13 +4,29 @@
   "description": "A text based adventure game in Node",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "start:dev": "npx nodemon src/index.ts"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "Larry Reaux",
   "license": "ISC",
   "dependencies": {
+    "@types/figlet": "^1.5.8",
+    "@types/gradient-string": "^1.1.6",
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.16"
+    "figlet": "^1.7.0",
+    "gradient-string": "^2.0.2",
+    "inquirer": "^9.2.16",
+    "nodemon": "^3.1.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/inquirer": "^9.0.7",
+    "typescript": "^5.4.5"
+  }
 }
