--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "times-echo",
   "version": "1.0.0",
   "description": "A text based adventure game in Node",
-  "main": "dist/index.js",
+  "main": "bin/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node bin/index.js",
     "start:dev": "npx nodemon src/index.ts"
+  },
+  "bin": {
+    "playTimesEcho": "./bin/index.js"
   },
   "pre-commit": [
     "ts.check",
